2009-07-30:
===========

- Completed work on the "Create image" functionality in the TinyMCE plugin.
- Worked around the security violation caused by rendering of images with data 
URLs in Webkit/Gecko 1.9.0.
- A bit of improved browser detection in the PaintWeb lib.
- Fixed image saving as JPEG in Firefox.

2009-07-29:
===========

- Implemented better support for the background color configuration option. Now 
PaintWeb makes it more obvious when an image has true transparency and when not.
- Fixed the eraser tool to properly erase the image pixels, irrespective of the 
background color.
- New icon for the PaintWeb button from the TinyMCE plugin.
- Implemented support for creating new images from the TinyMCE plugin. New 
images use data URLs. (still needs bug fixing / testing)

2009-07-28:
===========

- Continued work on image save into Moodle. This time worked on refining the 
implementation of image save as a file.

- Fixes/improvements to the server-side script imagesave.php. Now the script 
determines if an image comes from a course and updates it accordingly - if 
permissions allow it. If the image cannot be found/updated, then a new image is 
saved in the PaintWeb images folder inside the data dir.

- Implemented support for image file types in the PaintWeb.imageSave() method.  
Currently only Firefox 3.5 and Opera 10 can save PNG and JPEG images. The rest 
of the browsers only support PNG.

- When an image from a course is updated, PaintWeb tries to maintain the same 
file format: PNG or JPEG. If the format cannot be maintained, then a new PNG 
image is created in the PaintWeb images folder from the data dir.

- TinyMCE plugin improvements. Made it behave better with regards to image 
updates/saves.

- New config option for image save quality (for JPEGs).
- New config option for "moodleSaveMethod". Now users/devs can easily switch the 
PaintWeb Moodle extension to save images as data URLs or as files, depending on 
their likings.
