@@ -18,7 +18,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-07-28 13:26:35 +0300 $
+ * $Date: 2009-08-03 19:35:31 +0300 $
  */
 
 // This script serves images saved by PaintWeb to the browser.
@@ -30,35 +30,35 @@ require_once('../../../../lib/filelib.php');
 disable_debugging();
 
 // The list of allowed image MIME types associated to file extensions.
-$allowedTypes = array('png' => 'image/png', 'jpg' => 'image/jpeg');
+$imagetypes = array('png' => 'image/png', 'jpg' => 'image/jpeg');
 
-$file = $_GET['img'];
+$file = required_param('img', PARAM_FILE);
 if (empty($file) || strpos($file, '/') !== false) {
-  die('image not found');
+    die('image not found');
 }
 
 $filetype = substr($file, strpos($file, '.') + 1);
-if (empty($filetype) || !array_key_exists($filetype, $allowedTypes)) {
-  die('image not found');
+if (empty($filetype) || !array_key_exists($filetype, $imagetypes)) {
+    die('image not found');
 }
 
-$filetype = $allowedTypes[$filetype];
+$filetype = $imagetypes[$filetype];
 
 $path = $CFG->dataroot . '/' . $CFG->paintwebImagesFolder . '/' . $file;
 
 if (!file_exists($path)) {
-  die('image not found');
+    die('image not found');
 }
 
 // Seconds for files to remain in caches
 $lifetime = isset($CFG->filelifetime) ? $CFG->filelifetime : 86400;
 $forcerefresh = optional_param('forcerefresh', 0, PARAM_BOOL);
 if ($forcerefresh) {
-  $lifetime = 0;
+    $lifetime = 0;
 }
 
 session_write_close(); // unlock session during fileserving
 send_file($path, $file, $lifetime, 0, false, false, $filetype);
 
-// vim:set spell spl=en fo=anl1qrowcb tw=80 ts=2 sw=2 sts=2 sta et noai nocin fenc=utf-8 ff=unix: 
+// vim:set spell spl=en fo=tanqrowcb tw=80 ts=4 sw=4 sts=4 sta et noai nocin fenc=utf-8 ff=unix: 
 
