@@ -1,3 +1,12 @@
+2009-08-03:
+===========
+
+- Worked on coding style for the PHP scripts. Now the scripts follow the Moodle 
+coding guidelines more closely.
+- Image save now requires users to be logged-in. Obviously.
+- More usage of Moodle API inside the PHP scripts.
+- Localization updates.
+
 2009-07-30:
 ===========
 
